test/invalid/unused.anf
mod unused {
    struct S[T, U](x : T)
    def test[T]() = 1
}
